<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="#fff"
    card_view:cardCornerRadius="1dp"
    android:stateListAnimator="@anim/raise">

    <RelativeLayout
        android:id="@+id/wholeCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:contentDescription="@string/cardShare"
            android:onClick="cardShareHandler"
            android:src="@drawable/ic_share"
            android:tint="#333333" />


        <ImageButton
            android:id="@+id/btnDwnld"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@id/btnShare"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/btnShare"
            android:layout_toStartOf="@+id/btnShare"
            android:background="@null"
            android:contentDescription="@string/cardDownload"
            android:onClick="cardDownloadHandler"
            android:src="@drawable/ic_dwnld" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignBottom="@id/btnShare"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@id/btnShare"
            android:layout_toLeftOf="@+id/btnDwnld"
            android:layout_toStartOf="@+id/btnDwnld"
            android:fontFamily="sans-serif-thin"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="Title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblPosted"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@id/txtTitle"
            android:layout_alignStart="@+id/txtTitle"
            android:layout_below="@id/txtTitle"
            android:fontFamily="sans-serif-thin"
            android:text="@string/cardPostedLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtPosted"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignEnd="@+id/btnShare"
            android:layout_alignRight="@id/btnShare"
            android:layout_below="@id/txtTitle"
            android:layout_toEndOf="@+id/lblPosted"
            android:layout_toRightOf="@id/lblPosted"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblPosted"
            android:fontFamily="sans-serif-thin"
            android:maxLines="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>