<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/card_background"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">


    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/rippleColor"
        app:mrl_rippleDuration="350"
        app:mrl_rippleFadeDuration="75"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:id="@+id/bsTitle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/fileTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:singleLine="true"
                android:text="@string/saveSDCard"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="16sp" />

        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/rippleColor"
        app:mrl_rippleDuration="350"
        app:mrl_rippleFadeDuration="75"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:id="@+id/saveToLocal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/saveToLocalIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_file_download_white_24dp"
                android:tint="@color/primaryColor" />

            <TextView
                android:id="@+id/saveToLocalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:singleLine="true"
                android:text="@string/saveSDCard"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="16sp" />

        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/rippleColor"
        app:mrl_rippleDuration="350"
        app:mrl_rippleFadeDuration="75"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:id="@+id/saveToDrive"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/saveToDriveIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_insert_drive_file_white_24dp"
                android:textSize="@dimen/abc_text_size_large_material"
                android:tint="@color/primaryColor" />

            <TextView
                android:id="@+id/saveToDriveTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:singleLine="true"
                android:text="@string/saveDrive"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="16sp" />

        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/rippleColor"
        app:mrl_rippleDuration="350"
        app:mrl_rippleFadeDuration="75"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/shareIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_share_white_24dp"
                android:textSize="@dimen/abc_text_size_large_material"
                android:tint="@color/primaryColor" />

            <TextView
                android:id="@+id/shareTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:singleLine="true"
                android:text="@string/cardShare"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="16sp" />

        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>


</LinearLayout>
